; ModuleID = '/home/carl/AnghaBench/linux/drivers/thermal/intel/extr_intel_pch_thermal.c_pch_thermal_get_temp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/thermal/intel/extr_intel_pch_thermal.c_pch_thermal_get_temp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thermal_zone_device = type { %struct.pch_thermal_device* }
%struct.pch_thermal_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.pch_thermal_device*, i32*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.thermal_zone_device*, i32*)* @pch_thermal_get_temp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pch_thermal_get_temp(%struct.thermal_zone_device* %0, i32* %1) #0 {
  %3 = alloca %struct.thermal_zone_device*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.pch_thermal_device*, align 8
  store %struct.thermal_zone_device* %0, %struct.thermal_zone_device** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.thermal_zone_device*, %struct.thermal_zone_device** %3, align 8
  %7 = getelementptr inbounds %struct.thermal_zone_device, %struct.thermal_zone_device* %6, i32 0, i32 0
  %8 = load %struct.pch_thermal_device*, %struct.pch_thermal_device** %7, align 8
  store %struct.pch_thermal_device* %8, %struct.pch_thermal_device** %5, align 8
  %9 = load %struct.pch_thermal_device*, %struct.pch_thermal_device** %5, align 8
  %10 = getelementptr inbounds %struct.pch_thermal_device, %struct.pch_thermal_device* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32 (%struct.pch_thermal_device*, i32*)*, i32 (%struct.pch_thermal_device*, i32*)** %12, align 8
  %14 = load %struct.pch_thermal_device*, %struct.pch_thermal_device** %5, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 %13(%struct.pch_thermal_device* %14, i32* %15)
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
